working version of docker containers

--- a/default.conf
+++ b/default.conf
@@ -9,4 +9,9 @@ server {
     location /media/ {
         alias /app/media/;
     }
+
+    location / {
+        alias /usr/share/nginx/html;
+        try_files $uri $uri/ /index.html;
+    }
 }
