--- a/default.conf
+++ b/default.conf
@@ -11,7 +11,7 @@ server {
     }
 
     location / {
-        alias /usr/share/nginx/html;
+        root /usr/share/nginx/html;
         try_files $uri $uri/ /index.html;
     }
 }
